# dataCollection

./: .gitignore  README.md  ai_data_collection.py  gen_script.py  pyproject.toml  report_content.md
curriculum_design/: curriculum_design.ipynb  data_integration.py  gen_docx.py  hw3_imports.py  main.py  newword_evaluator.py  pipeline.py  requirements.txt  settings.py  visualize_extra.py  课程设计-陈喜盈(3223004641).docx
curriculum_design/output/: curriculum_report.json  summary.json
homework_1/: __init__.py  ai_corpus.txt  report_content.md
homework_1/output/: ai_word_frequency.csv
homework_2/: __init__.py  config.py  corpus_collector.py  dict_manager.py  homework2.ipynb  main.py  pipeline.py  report_content.md  requirements.txt  seed_terms_ai.txt  seed_terms_finance.txt  segmentation.py  text_process.py  visualize.py  w2v_annoy_miner.py  ~$2-第三点-定制化词典分词与展示.docx  作业2-第三点-定制化词典分词与展示.docx
homework_2/output/: dictionary_stats.txt  mixed_raw_corpus.txt  segment_compare_demo.txt  user_dict_ai.txt  user_dict_finance.txt
homewprk_3/: config.py  data_loader.py  gen_homework3_docx.py  homework3.ipynb  main.py  preprocess.py  recommender.py  report_content.md  requirements.txt  topic_models.py  visualize.py  作业3-陈喜盈(3223004641).docx
homewprk_3/output/: chinese_ai_recommend_demo.txt  chinese_ai_report.json  chinese_docs.txt  newsgroups_docs.txt  newsgroups_recommend_demo.txt  newsgroups_report.json  summary.json
output/: ai_keywords_tfidf.csv  ai_raw_data.txt
