[project]
name = "datacollection"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ipykernel>=7.2.0",
    "ipython>=9.14.1",
    "jieba3k>=0.35.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
    "python-docx>=1.2.0",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.15.0",
    "umap-learn>=0.5.7",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
